pulkit | Writing the feed servic